simple-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web
spec:
  selector:
    matchLabels:
      app: simple-web
  replicas: 2
  template:
    metadata:
      labels:
        app: simple-web
    spec:
      containers:
      - name: simple-web
        image: a3magic3pocket/simple-web:latest
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: simple-web
  labels:
    app: simple-web
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: simple-web
  # type: LoadBalancer
  type: NodePort
