webhook-endpoints.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: webhook-svc
subsets:
  - addresses:
      - ip: your-webhook-ip
    ports:
      - port: 9000
