webhook-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: webhook-svc
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
