ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  annotations: 
    kubernetes.io/ingress.class: 'nginx' 
    nginx.ingress.kubernetes.io/rewrite-target: / 
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    cert-manager.io/issuer: "letsencrypt-prod"
    # cert-manager.io/issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
      - www.your-frontend-url.com
      - your-frontend-url.com
      - your-backend-url.com
      - your-webhook-url.com
    secretName: simple-tls
  rules:
    - host: "your-backend-url.com"
      http:
        paths:
          - pathType: Prefix
            path: / 
            backend:
              service:
                name: simple-api
                port: 
                  number: 8080
    - host: "your-frontend-url.com"
      http:
        paths: 
          - pathType: Prefix
            path: / 
            backend:
              service:
                name: simple-web 
                port: 
                  number: 3000
    - host: "www.your-frontend-url.com"
      http:
        paths: 
          - pathType: Prefix
            path: / 
            backend:
              service:
                name: simple-web 
                port: 
                  number: 3000
    - host: "your-webhook-url.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: webhook-svc
                port:
                  number: 9000
